--- a/sass/scss/_dish_containers.scss
+++ b/sass/scss/_dish_containers.scss
@@ -11,23 +11,19 @@
   cursor: pointer;
   .dish {
     @include y-centered-x-space-between;
-    flex: 1;
-    padding: 0.8rem 1.5rem 0.8rem 0.8rem;
-    width: calc(100% - 75px); //* 75px : .choosen-dish width
-
-    p {
-      margin-top: 0.3rem;
-    }
+    flex-grow: 1;
+    padding: 0.8rem;
+    padding-right: 1.5rem;
+    width: 100%;
     .description {
       width: calc(100% - (2 * 1.5rem)); //* 1.5rem : padding around .price
       h4 {
         @include text-elipsis;
         font-size: 1.2rem;
-        width: 100%;
       }
       p {
         @include text-elipsis;
-        width: 100%;
+        margin-top: 0.3rem;
       }
     }
     .price {
@@ -41,6 +37,7 @@
   .chosen-dish {
     @include x-y-centered;
     background: $seagreen;
+    width: 0px;
     i {
       font-size: 1.5rem;
       color: white;
